# stm32f746zg-quickstart

./: Cargo.toml  README.md  memory.x  openocd.cfg
examples/: allocator.rs  hello.rs  test_on_host.rs
src/: main.rs
