[package]
authors = ["oopsmonk <oopsmonk@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f746zg-quickstart"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

[dependencies.stm32f7]
version = "0.11.0"
features = ["stm32f7x6", "rt"]

# Uncomment for the panic example to parse and dump ARM ITM packets.
# panic-itm = "0.4.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f746zg-quickstart"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
